add background image for dinner

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,3 +12,8 @@ background-size: cover;
   padding:115px;
   hover: background-color: white;
   }
+  #dinner{
+  background-image:url("/home/june/Documents/mpft-ip/ip2/assets/foodtop/dinner.jpg");
+  background-size: cover;
+  padding:115px;
+}
