add background image for luncht

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,3 +17,8 @@ background-size: cover;
   background-size: cover;
   padding:115px;
 }
+#lunch{
+  background-image: url("/home/june/Documents/mpft-ip/ip2/assets/foodtop/lunch.jpg");
+  background-size: cover;
+  padding:115px;
+}
