--- a/css/styles.css
+++ b/css/styles.css
@@ -22,3 +22,23 @@ background-size: cover;
   background-size: cover;
   padding:115px;
 }
+#fast-food{
+
+   width: 600px;
+   border: 10px solid #F0F3F4;
+   padding: 60px;
+   margin: 55px;
+   outline: 20px;
+   outline-color: white
+   float: right;
+}
+#fastfood2{
+
+  background-color:white;
+   width: 600px;
+
+   padding: 75px;
+   margin: 2px;
+   outline: 20px;
+   outline-color: white
+}
