add styling for subscription

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,3 +109,10 @@ color:#F15A29;
 
 
 }
+.subscribe{
+  background-image: url("/home/june/Documents/mpft-ip/ip2/assets/backgrounds/subscribe.jpg");
+  padding:100px;
+  align:center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
