--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 #intro{
   background-image:url("/home/june/Documents/mpft-ip/ip2/assets/backgrounds/landing.jpg");
 background-size: cover;
+background-attachment: fixed;
   padding: auto;
   margin: auto;
   height: 800px;
